Modification of about information and links

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author :
   googleplus : 112889667393707528432
   linkedin : chenfeng-zhu-a090b223
   stackoverflow : sampig
+  researchgate: Chenfeng_Zhu
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
