--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author :
   github : sampig
   twitter : zhuchf
   facebook : zhuchf
-  googleplus : 112889667393707528432
+  # googleplus : 112889667393707528432
   linkedin : chenfeng-zhu-a090b223
   stackoverflow : sampig
   researchgate: Chenfeng_Zhu
