Config: add disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : sampig
+      short_name : sampig-github
     livefyre :
       site_id : 123
     intensedebate :
@@ -104,7 +104,7 @@ JB :
       colorscheme: light
     duoshuo :
       short_name : sampig
-   
+
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
@@ -130,7 +130,7 @@ JB :
   #
   sharing :
     provider : false
-    
+
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
   #
@@ -141,4 +141,4 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
+
